<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="myfragment.mobileapp.wit.edu.lab4_problem.CalculatorActivity">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="300dp"
        android:text="@string/calculator_message"
        android:textAppearance="@android:style/TextAppearance.Material.Headline"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/genderRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="250dp"
        android:checkedButton="@+id/maleRadioButton"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTextView">

        <TextView
            android:id="@+id/genderRadioGroupLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="10px"
            android:paddingRight="10px"
            android:text="@string/gender_radio_group"
            android:textAppearance="@android:style/TextAppearance.Material"
            android:textSize="24sp"
            tools:layout_editor_absoluteX="76dp"
            tools:layout_editor_absoluteY="292dp" />

        <RadioButton
            android:id="@+id/maleRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10px"
            android:paddingRight="10px"
            android:text="@string/gender_male_radio_btn"
            android:textAppearance="@android:style/TextAppearance.Material"
            android:textSize="24sp"
            tools:layout_editor_absoluteX="128dp"
            tools:layout_editor_absoluteY="298dp" />

        <RadioButton
            android:id="@+id/femaleRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="10px"
            android:paddingRight="10px"
            android:text="@string/gender_female_radio_btn"
            android:textAppearance="@android:style/TextAppearance.Material"
            android:textSize="24sp"
            tools:layout_editor_absoluteX="128dp"
            tools:layout_editor_absoluteY="298dp" />
    </RadioGroup>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genderRadioGroup">

        <TextView
            android:id="@+id/heightSelectorLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/height_selector_label"
            android:textAppearance="@android:style/TextAppearance.Material"
            android:textSize="24sp" />

        <Spinner
            android:id="@+id/unit1Spinner"
            style="@android:style/Widget.Material.Spinner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:dropDownWidth="match_parent"
            android:entries="@array/unit1Values" />

        <TextView
            android:id="@+id/unit1Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/unit1_label"
            android:textAppearance="@android:style/TextAppearance.Material"
            android:textSize="24sp" />

        <Spinner
            android:id="@+id/unit2Spinner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:dropDownWidth="match_parent"
            android:entries="@array/unit2Values" />

        <TextView
            android:id="@+id/unit2Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/unit2_label"
            android:textAppearance="@android:style/TextAppearance.Material"
            android:textSize="24sp" />
    </LinearLayout>

    <Button
        android:id="@+id/calculateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/calculate_button_text"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />


</android.support.constraint.ConstraintLayout>
